--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "encodeurl": "^1.0.2",
     "enhanced-resolve": "^5.15.0",
     "entities": "^2.2.0",
+    "env-cmd": "^10.1.0",
     "error-ex": "^1.3.2",
     "error-stack-parser": "^2.1.4",
     "es-abstract": "^1.22.2",
@@ -828,7 +829,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server/src/index.js",
+    "server": "env-cmd -f ./server/src/config/dev.env nodemon server/src/index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
