--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server/src/index.js",
+    "dev": "env-cmd ./src/config/dev.env nodemon server/src/index.js",
     "start": "node server/src/index.js"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "spotify-web-api-node": "^5.0.2",
